# sfml-embedded

./: .gitignore  CMakeLists.txt  EmbeddedLogger.cpp  EmbeddedLogger.hpp  EmbeddedWindow.cpp  EmbeddedWindow.hpp  EmbeddedWindowEventReceiver.hpp  EmbeddedWindowImpl.hpp  EmbeddedWindowImplWin32.cpp  EmbeddedWindowImplWin32.hpp  Readme.md
include/SFML/: Embedded.hpp
include/SFML/Embedded/: EmbeddedLogger.hpp  EmbeddedWindow.hpp  EmbeddedWindowEventState.hpp
src/SFML/Embedded/: EmbeddedLogger.cpp  EmbeddedWindow.cpp  EmbeddedWindowImpl.cpp  EmbeddedWindowImpl.hpp  EmbeddedWindowImplWin32.cpp
